test-suite/bugs/bug_2245.v
Module Type Test.

Section Sec.
Variables (A:Type).
Context (B:Type).
End Sec.

Fail Check B. (* used to be found !!! *)
Fail Check A.

End Test.
